2004-11-24   Amanpreet Singh Alam <amanlinux@netscape.net>

	* configure.ac: Add pa to ALL_LINGUAS

2004-05-01  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-04-10  Gareth Owen  <gowen72@yahoo.com>

	* configure.ac: Added en_GB to ALL_LINGUAS

2004-03-21  Gustavo Noronha Silva  <kov@debian.org>

	* configure.ac: added pt_BR to ALL_LINGUAS

2004-02-22  Jordi Mallach  <jordi@sindominio.net>

	* src/init.c (window_menu_help_about): Use gtk_widget_show_all so
	the href shows up.
	Add a callback to destroy the about dialog, probably fixing a random
	segfault I was experiencing.

2004-02-12  Jordi Mallach  <jordi@sindominio.net>

	* src/gnome-mud.c (main): Set the default application window using
	the new icon.

	* NEWS: Set release date.
	* configure.ac: Release gnome-mud 0.10.5.

2004-02-12  Jordi Mallach  <jordi@sindominio.net>

	* BUGS: Remove (old) items, just leave the Bugzilla pointer.
	* NEWS: Update for 0.10.5.

2004-02-11  Jordi Mallach  <jordi@sindominio.net>

	* src/window.c (terminal_feed): Revert last patch, doesn't work well.
	* src/net.c (connection_send_data): Patch from
	Juliano Ravasi Ferraz <jferraz@linkway.com.br>, convert all input
	text to the current locale before sending. Solves bad display on
	non-UTF-8 muds. Fixes bug #133517.

2004-02-11  Robin Ericsson  <lobbin@localhost.nu>

	* src/window.c (terminal_feed): Convert vte-feed-buffer from utf-8
	to locale fixing problem where user has a non-utf-8 locale.

2004-02-11  Jordi Mallach  <jordi@sindominio.net>

	* src/pixmaps/gnome-mud.png, src/pixmaps/gnome-mud-tray-icon.png,
	src/svg/gnome-mud.svg: New gnome-mud icon, courtesy of Daniel Taylor,
	thanks!
	* src/pixmaps/Makefile.am: Add new icons, and install gnome-mud.png in
	the general pixmapsdir.
	* src/tray.c (tray_update_icon): Use the new tray icon.
	* src/init.c (window_menu_help_about): Use new app icon.
	* gnome-mud.desktop.in: Likewise.

	* src/python.c: Placate silly warning.
