@@ -1,4 +1,4 @@
-SUBDIRS    = doc po src plugins
+SUBDIRS = doc po src plugins
 
 schemadir = $(sysconfdir)/gconf/schemas
 schema_in_files = gnome-mud.schemas.in
@@ -11,25 +11,26 @@ Applications_DATA = $(Applications_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
 EXTRA_DIST = \
-ABOUT-NLS \
-AUTHORS \
-BUGS \
-COPYING \
-ChangeLog \
-INSTALL \
-NEWS \
-PLUGIN.API \
-README \
-ROADMAP \
-config.rpath \
-gnome-mud.desktop.in \
-gnome-mud.lsm \
-intltool-extract.in \
-intltool-merge.in \
-intltool-update.in \
-intltool-modules/XML/Parser/Style/OrigTree.pm \
-$(Applications_DATA) \
-$(schema_DATA)
+	ABOUT-NLS \
+	AUTHORS \
+	BUGS \
+	COPYING \
+	ChangeLog \
+	INSTALL \
+	NEWS \
+	PLUGIN.API \
+	README \
+	ROADMAP \
+	config.rpath \
+	gnome-mud.desktop.in \
+	gnome-mud.lsm \
+	gnome-mud.spec \
+	intltool-extract.in \
+	intltool-merge.in \
+	intltool-update.in \
+	intltool-modules/XML/Parser/Style/OrigTree.pm \
+	$(Applications_DATA) \
+	$(schema_DATA)
 
 install-data-local:
 	-GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $(srcdir)/$(schema_DATA)
